// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The form components as a form should render properly 1`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="form-row_container"
    >
      <label>
        My Label
        <input
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Checkbox
        <input
          checked=""
          type="checkbox"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Date
        <input
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Range
        <input
          max="100"
          min="0"
          step="1"
          type="range"
          value="50"
        />
      </label>
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        Telephone
        <input
          type="tel"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Month
        <input
          type="month"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Week
        <input
          type="week"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime-local"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Time
        <input
          type="time"
          value=""
        />
      </label>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        
      </li>
      <li
        data-testid="range"
      >
        Range: 
        
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render properly 2`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="form-row_container"
    >
      <label>
        My Label
        <input
          type="text"
          value="Changed Value"
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Checkbox
        <input
          checked=""
          type="checkbox"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Date
        <input
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Range
        <input
          max="100"
          min="0"
          step="1"
          type="range"
          value="50"
        />
      </label>
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        Telephone
        <input
          type="tel"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Month
        <input
          type="month"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Week
        <input
          type="week"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime-local"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Time
        <input
          type="time"
          value=""
        />
      </label>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        
      </li>
      <li
        data-testid="range"
      >
        Range: 
        
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render properly 3`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="form-row_container"
    >
      <label>
        My Label
        <input
          type="text"
          value="Changed Value"
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Checkbox
        <input
          checked=""
          type="checkbox"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Date
        <input
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Range
        <input
          max="100"
          min="0"
          step="1"
          type="range"
          value="50"
        />
      </label>
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        Telephone
        <input
          type="tel"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Month
        <input
          type="month"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Week
        <input
          type="week"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          type="datetime-local"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Time
        <input
          type="time"
          value=""
        />
      </label>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        Changed Value
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
      </li>
      <li
        data-testid="range"
      >
        Range: 
        50
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
      </li>
    </ul>
  </div>
</div>
`;
